# SolanaContract

./: README.md
example/hello-contract/contract-rust/: Cargo.toml
example/hello-contract/contract-rust/src/: lib.rs
example/hello-contract/contract-rust/tests/: lib.rs
example/hello-contract/rust-client/: Cargo.toml
example/hello-contract/rust-client/src/: client.rs  lib.rs  main.rs  utils.rs
example/transfer-money/client/: Cargo.toml
example/transfer-money/client/src/: client.rs  main.rs  utils.rs
example/transfer-money/contract/: Cargo.toml
example/transfer-money/contract/src/: lib.rs  processor.rs
scripts/: solana-1.10.24-install.sh
