[package]
name = "transfer_client"
version = "0.0.1"
description = "Money Transfer Contract Demo"
authors = ["Solana Maintainers <maintainers@solana.com>", "me <me@example.com>"]
repository = "https://github.com/Deadman-DAO/SolanaContract"
license = "Apache-2.0"
homepage = "https://www.deadmandao.com"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "~1.10.24"
solana-sdk = "1"
solana-client = "1"
yaml-rust = "0.4"
thiserror = "1"
home = "0.5.3"

[dev-dependencies]
solana-program-test = "~1.10.24"
solana-sdk = "~1.10.24"
