[package]
name = "demo_transfer"
version = "0.0.1"
description = "Money Transfer Contract Demo"
authors = ["Solana Maintainers <maintainers@solana.com>", "me <me@example.com>"]
repository = "https://github.com/Deadman-DAO/SolanaContract"
license = "Apache-2.0"
homepage = "https://www.deadmandao.com"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
# borsh = "0.9.3"
# borsh-derive = "0.9.3"
# solana-program = "~1.10.24"

[dev-dependencies]
# solana-program-test = "~1.10.24"
# solana-sdk = "~1.10.24"

[lib]
name = "demo_transfer"
crate-type = ["cdylib", "lib"]
